# coin-trading-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: backtesting.md  configuration.md  dashboard.md  live-trading.md  operational-runbook.md  risk-management.md  strategies.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
scripts/ralph/: CLAUDE.md  prd.json  progress.txt
src/bot/: __init__.py  __main__.py  config.py  main.py  validation.py
tests/: test_config.py  test_main.py  test_v2_007_cycle_safety.py  test_v2_008_position_manager.py  test_v2_011_regime.py  test_v2_022_strategy_tracker.py  test_v2_023_portfolio_risk.py  test_v2_025_order_book.py  test_v2_026_dashboard_wiring.py  test_v2_028_validation.py  test_v2_029_integration.py  test_v3_integration.py  test_v6_integration.py
tests/backtest/: test_engine.py  test_quant_backtest.py  test_v2_021_realistic_backtest.py  test_v2_027_backtest_cli.py
tests/dashboard/: test_app.py  test_drawdown_api.py  test_engine_api.py  test_health_endpoint.py  test_heatmap_api.py  test_metrics_history_api.py  test_trade_detail_api.py  test_v2_026_enhanced_dashboard.py  test_v4_004_trades_positions.py  test_v4_005_strategy_management.py  test_v4_006_analytics.py  test_v4_007_auth.py  test_v4_008_settings.py  test_v4_012_emergency.py  test_v4_013_audit.py  test_v4_014_integration.py  test_websocket.py
tests/data/: test_backfill.py  test_collector.py  test_data_quality.py  (+5 more)
(+249 files in other folders)
