[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coin-trading-bot"
version = "0.1.0"
description = "Python-based cryptocurrency automated trading system"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.0.0",
    "ta>=0.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "structlog>=23.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "python-telegram-bot>=20.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-jose[cryptography]>=3.3.0",
    "statsmodels>=0.14.0",
    "scipy>=1.11.0",
    "arch>=6.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
